--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <h1>Liu-Arby P.Garcia</h1>
 
-        <img src="https://www.facebook.com/photo.php?fbid=2159897341171550&set=pb.100014539154211.-2207520000&type=3" alt="Liuuu">
+        <img src="Liuuu1231.jpg" alt="Liuuu" width="200" height="200">
 
         <p>
             Lorem ipsum dolor sit amet 
